--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-project-version
-version = 0.19.0
+version = 0.19.1
 description = Django reusable app to show your project version
 python_requires = >=3.8
 license_files =
@@ -16,6 +16,7 @@ classifiers =
     Framework :: Django :: 4.1
     Framework :: Django :: 4.2
     Framework :: Django :: 5.0
+    Framework :: Django :: 5.1
     License :: OSI Approved :: MIT License
     Operating System :: Unix
     Programming Language :: Python :: 3.8
@@ -34,7 +35,7 @@ zip_safe = False
 include_package_data = True
 test_suite = tests
 install_requires =
-    django>=3.2,<5.1
+    django>=3.2,<5.2
     django-appconf>=1.0.3
 
 [options.extras_require]
@@ -144,7 +145,6 @@ universal = False
 [sdist]
 formats = zip
 
-
 [mypy]
 files = djversion,tests
 check_untyped_defs = True
@@ -166,7 +166,6 @@ plugins = mypy_django_plugin.main,mypy_drf_plugin.main
 [mypy.plugins.django-stubs]
 django_settings_module = tests.settings
 
-
 [flake8]
 max-line-length = 88
 select = B,C,D,E,F,W,T4,C4,TAE,T,M511,T100,TYP,A,EXE,CFQ,SIM,DUO,N,DJ,ECE,FS,R,CCR,NIC,PL,I25,R1,SLF001,DTZ,GT,G,INP,PIE,B901,FBT,TRY
@@ -180,7 +179,6 @@ exclude = setup.py
 dictionaries = en_US,python,technical,django
 spellcheck-targets = comments,names
 eradicate-whitelist = mypy
-
 
 [check-manifest]
 ignore =
@@ -203,7 +201,6 @@ ignore =
 ignore-bad-ideas =
     *.mo
 
-
 [coverage:run]
 branch = True
 source = djversion
@@ -217,7 +214,6 @@ omit =
     djversion/apps.py
 exclude_lines =
     pragma: no cover
-
 
 [isort]
 balanced_wrapping = True
@@ -236,19 +232,15 @@ use_parentheses = True
 virtual_env = $VIRTUAL_ENV
 known_third_party = appconf,django,git,rest_framework,setuptools
 
-
 [darglint]
 docstring_style = sphinx
-
 
 [bandit]
 skips = B507
 tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B323,B324,B401,B402,B403,B404,B405,B406,B407,B408,B409,B410,B411,B412,B413,B501,B502,B503,B504,B505,B506,B601,B602,B603,B604,B605,B606,B607,B608,B609,B610,B611,B701,B702,B703
 
-
 [tool:check-wheel-contents]
 ignore = W004,W002
-
 
 [tox:tox]
 skip_missing_interpreters = True
@@ -259,6 +251,7 @@ envlist =
     {py38,py39,py310,py311}-4.1.x
     {py38,py39,py310,py311}-4.2.x
     {py310,py311}-5.0.x
+    {py310,py311}-5.1.x
     check
     check-build
 
@@ -272,6 +265,7 @@ deps =
     4.1.x: Django>=4.1,<4.2
     4.2.x: Django>=4.2,<5.0
     5.0.x: Django>=5.0,<5.1
+    5.1.x: Django>=5.1,<5.2
 commands=
     make install
     make test
@@ -293,14 +287,12 @@ commands =
 allowlist_externals =
     make
 
-
 [gh-actions]
 python =
     3.8: py38
     3.9: py39
     3.10: py310
     3.11: py311
-
 
 [pylint.MASTER]
 ignore = CVS
@@ -462,7 +454,6 @@ analyse-fallback-blocks = no
 
 [pylint.EXCEPTIONS]
 overgeneral-exceptions = Exception
-
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = tests.settings
