Added Django 5.2 LTS to supported versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-project-version
-version = 0.19.1
+version = 0.19.2
 description = Django reusable app to show your project version
 python_requires = >=3.8
 license_files =
@@ -17,6 +17,7 @@ classifiers =
     Framework :: Django :: 4.2
     Framework :: Django :: 5.0
     Framework :: Django :: 5.1
+    Framework :: Django :: 5.2
     License :: OSI Approved :: MIT License
     Operating System :: Unix
     Programming Language :: Python :: 3.8
@@ -35,7 +36,7 @@ zip_safe = False
 include_package_data = True
 test_suite = tests
 install_requires =
-    django>=3.2,<5.2
+    django>=3.2,<5.3
     django-appconf>=1.0.3
 
 [options.extras_require]
@@ -252,6 +253,7 @@ envlist =
     {py38,py39,py310,py311}-4.2.x
     {py310,py311}-5.0.x
     {py310,py311}-5.1.x
+    {py310,py311}-5.2.x
     check
     check-build
 
@@ -266,6 +268,7 @@ deps =
     4.2.x: Django>=4.2,<5.0
     5.0.x: Django>=5.0,<5.1
     5.1.x: Django>=5.1,<5.2
+    5.2.x: Django>=5.2,<5.3
 commands=
     make install
     make test
